--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     color: wheat;
     margin: 0px;
     background-position: 0%;
-    background-image: linear-gradient(to left bottom, #a649c7, #9052c8, #7a59c7, #655ec4, #5061be, #5061be, #5061be, #5061be, #655ec4, #7a59c7, #9052c8, #a649c7);
+    background-image: linear-gradient(to left top, #9115d4, #8148e2, #7565ea, #707cee, #7390ed, #7390ed, #7390ed, #7390ed, #707cee, #7565ea, #8148e2, #9115d4);
     background-repeat: no-repeat;
     font-size: 20px;
     font-weight: normal;
