--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,18 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 html{
-    height: auto;
-    width: auto;
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 100%;
 }
 
 body {
-    color: wheat;
+    height: max-content;
     margin: 0px;
+    padding: 0px;
     background-position: 0%;
     background-image: linear-gradient(to left top, #9115d4, #8148e2, #7565ea, #707cee, #7390ed, #7390ed, #7390ed, #7390ed, #707cee, #7565ea, #8148e2, #9115d4);
-    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
     font-size: 20px;
     font-weight: normal;
     text-align: center;
@@ -27,16 +26,13 @@ body {
 }
 
 .footer{
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
-    width: 100%;
     text-align: center;
-    position: absolute;
     display: block;
     margin-bottom: 0px;
     margin-top: auto;
-    border-radius: 15px;
     padding: 5px;
 }
 
