--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ html{
     margin: 0px;
     padding: 0px;
     width: 100%;
-    height: 15.8in;
 }
 
 body {
@@ -26,11 +25,10 @@ body {
 }
 
 .mid{
-    position: absolute;
-    top: 35%;
+    bottom:50%;
 }
 
-.footer{
+footer{
     background-color:rgb(53, 47, 47);
     color: azure;
     position: fixed;
@@ -60,6 +58,7 @@ body {
 .mid_btn:hover{
     background-color: #5300b9;
     color: azure;
+    cursor: pointer;
 }
 
 .li_image{
