--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 }
 
 body{
-    background: url("background.jpg");
+    background: url("lightBG.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -68,7 +68,8 @@ nav{
 #themeButton{
     border: 0;
     background-color: rgba(0, 0, 0, 0);
-    margin-right: 10px;
+    margin: auto;
+    padding: 0;
 }
 
 #themeButton *:hover{
