--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ nav{
     border: 0;
     background-color: rgba(0, 0, 0, 0);
     margin: auto;
-    padding: 0;
+    padding: 10px;
 }
 
 #themeButton *:hover{
