--- a/styles/index.css
+++ b/styles/index.css
@@ -4,26 +4,33 @@
     --primary-text: #FFFFFF;
     --primary-bg: #424B54;
     --secondary-text: #090909;
+    --nav-height: 80px;
 }
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 #root{
     min-height: 100vh;
+    /* height:auto; */
     max-width: 100%;
     font-size: 18px;
     background-color: var(--secondary-color);
     display: flex;
     flex-direction: column;
+    /* overflow: hidden; */
 }
 
 nav{
     width: 100%;
     height: auto;
+    top: 0;
+    position: sticky;
+    z-index: 2;
 }
 
 #nav-list{
@@ -31,7 +38,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    height: 80px;
+    height: var(--nav-height);
     background-color: var(--navbar-color);
     font-size: 20px;
 }
@@ -55,29 +62,61 @@ nav{
 main{
     display: flex;
     flex-grow: 1;
-    height: 200vh;
-    margin: 15px;
-    padding: 50px;
+    /* height: 200vh; */
+    /* margin: 15px; */
+    /* padding: 50px; */
     background: var(--primary-bg);
-    border-radius: 8px;
+    /* border-radius: 8px; */
     flex-direction: column;
-    gap: 10px;
+    /* gap: 10px; */
     text-align: center;
 }
 
 .container{
+    min-height: calc(100vh - var(--nav-height));
+    height: calc(100vh - var(--nav-height));
+    z-index: 1;
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
-    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    position: sticky;
+    top: var(--nav-height);
 }
 
 .container-title{
-    color: var(--primary-text);
     font-size: 25px;
 }
 
 .container-content{
+    display: block;
     flex-grow: 2;
+    overflow: auto;
+}
+
+.container:nth-child(even){
+    background-color: #FFF8E8;
+    color: var(--secondary-text);
+}
+
+.container:nth-child(odd){
+    background-color: #424b54;
     color: var(--primary-text);
+}
+
+#project-container{
+    .container-content{
+        width: 100%;
+        gap: 30px;
+        display: flex;
+        overflow-x: scroll;
+        flex-wrap: wrap;
+        /* flex-direction: column; */
+    }
+    .project{
+        /* height: 300px; */
+        display: block;
+        width: 500px;
+        flex-grow: 1;
+    }
 }
