--- a/styles/index.css
+++ b/styles/index.css
@@ -1,31 +1,20 @@
-:root{
-    --navbar-color:#FCD581 ;
-    --secondary-color: #FFF8E8;
-    --primary-text: #FFFFFF;
-    --primary-bg: #424B54;
-    --secondary-text: #090909;
-    --nav-height: 80px;
-}
-
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    scroll-behavior: smooth;
 }
 
-#root{
-    min-height: 100vh;
-    /* height:auto; */
-    max-width: 100%;
+#root {
+    height: 100vh;
+    max-width: 100vw;
     font-size: 18px;
-    background-color: var(--secondary-color);
     display: flex;
     flex-direction: column;
-    /* overflow: hidden; */
+    justify-content: center;
+    gap: 100px;
 }
 
-nav{
+nav {
     width: 100%;
     height: auto;
     top: 0;
@@ -33,7 +22,7 @@ nav{
     z-index: 2;
 }
 
-#nav-list{
+#nav-list {
     list-style: none;
     display: flex;
     align-items: center;
@@ -43,7 +32,7 @@ nav{
     font-size: 20px;
 }
 
-.nav-item-anchor{
+.nav-item-anchor {
     display: inline-flex;
     text-decoration: none;
     text-align: center;
@@ -55,11 +44,12 @@ nav{
     justify-content: center;
 }
 
-.nav-item-anchor:hover, .nav-item-anchor:focus{
+.nav-item-anchor:hover,
+.nav-item-anchor:focus {
     background-color: var(--secondary-color);
 }
 
-main{
+main {
     display: flex;
     flex-grow: 1;
     /* height: 200vh; */
@@ -72,7 +62,7 @@ main{
     text-align: center;
 }
 
-.container{
+.container {
     min-height: calc(100vh - var(--nav-height));
     height: calc(100vh - var(--nav-height));
     z-index: 1;
@@ -84,28 +74,28 @@ main{
     top: var(--nav-height);
 }
 
-.container-title{
+.container-title {
     font-size: 25px;
 }
 
-.container-content{
+.container-content {
     display: block;
     flex-grow: 2;
     overflow: auto;
 }
 
-.container:nth-child(even){
+.container:nth-child(even) {
     background-color: #FFF8E8;
     color: var(--secondary-text);
 }
 
-.container:nth-child(odd){
+.container:nth-child(odd) {
     background-color: #424b54;
     color: var(--primary-text);
 }
 
-#project-container{
-    .container-content{
+#project-container {
+    .container-content {
         width: 100%;
         gap: 30px;
         display: flex;
@@ -113,7 +103,8 @@ main{
         flex-wrap: wrap;
         /* flex-direction: column; */
     }
-    .project{
+
+    .project {
         /* height: 300px; */
         display: block;
         width: 500px;
