--- a/styles/style.css
+++ b/styles/style.css
@@ -596,16 +596,8 @@ html {
   position: fixed;
 }
 
-.absolute {
-  position: absolute;
-}
-
 .relative {
   position: relative;
-}
-
-.bottom-0 {
-  bottom: 0px;
 }
 
 .left-0 {
@@ -632,24 +624,28 @@ html {
   display: block;
 }
 
-.inline {
-  display: inline;
-}
-
 .flex {
   display: flex;
+}
+
+.grid {
+  display: grid;
 }
 
 .hidden {
   display: none;
 }
 
-.aspect-square {
-  aspect-ratio: 1 / 1;
-}
-
 .h-12 {
   height: 3rem;
+}
+
+.h-96 {
+  height: 24rem;
+}
+
+.h-\[60\%\] {
+  height: 60%;
 }
 
 .h-fit {
@@ -665,24 +661,33 @@ html {
   height: 100vh;
 }
 
-.max-h-60 {
-  max-height: 15rem;
+.h-max {
+  height: -moz-max-content;
+  height: max-content;
+}
+
+.max-h-96 {
+  max-height: 24rem;
+}
+
+.min-h-full {
+  min-height: 100%;
 }
 
 .min-h-screen {
   min-height: 100vh;
 }
 
-.w-44 {
-  width: 11rem;
+.w-64 {
+  width: 16rem;
 }
 
 .w-9 {
   width: 2.25rem;
 }
 
-.w-\[70\%\] {
-  width: 70%;
+.w-\[90\] {
+  width: 90;
 }
 
 .w-full {
@@ -693,16 +698,8 @@ html {
   width: 100vw;
 }
 
-.w-\[90\%\] {
-  width: 90%;
-}
-
-.w-\[95\%\] {
-  width: 95%;
-}
-
-.max-w-44 {
-  max-width: 11rem;
+.max-w-64 {
+  max-width: 16rem;
 }
 
 .flex-1 {
@@ -717,6 +714,26 @@ html {
 
 .animate-spin {
   animation: spin 1s linear infinite;
+}
+
+.snap-y {
+  scroll-snap-type: y var(--tw-scroll-snap-strictness);
+}
+
+.snap-mandatory {
+  --tw-scroll-snap-strictness: mandatory;
+}
+
+.snap-start {
+  scroll-snap-align: start;
+}
+
+.snap-always {
+  scroll-snap-stop: always;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -755,8 +772,32 @@ html {
   overflow: hidden;
 }
 
+.overflow-scroll {
+  overflow: scroll;
+}
+
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
 .overflow-y-auto {
   overflow-y: auto;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
+.overflow-y-hidden {
+  overflow-y: hidden;
+}
+
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
+
+.text-wrap {
+  text-wrap: wrap;
 }
 
 .rounded-md {
@@ -805,11 +846,6 @@ html {
   background-color: transparent;
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-35 {
   --tw-bg-opacity: 0.35;
 }
@@ -830,17 +866,17 @@ html {
   background-size: cover;
 }
 
-.bg-center {
-  background-position: center;
+.bg-top {
+  background-position: top;
 }
 
 .bg-no-repeat {
   background-repeat: no-repeat;
 }
 
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .p-12 {
@@ -851,6 +887,10 @@ html {
   padding: 0.5rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .p-8 {
   padding: 2rem;
 }
@@ -858,6 +898,15 @@ html {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .pt-12 {
@@ -888,6 +937,10 @@ html {
   line-height: 1rem;
 }
 
+.font-bold {
+  font-weight: 700;
+}
+
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -903,6 +956,11 @@ html {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.drop-shadow-md {
+  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .backdrop-blur-md {
@@ -921,8 +979,20 @@ html {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.\*\:min-h-96 > * {
+  min-height: 24rem;
+}
+
 .\*\:w-full > * {
   width: 100%;
+}
+
+.\*\:overflow-hidden > * {
+  overflow: hidden;
+}
+
+.\*\:overflow-x-hidden > * {
+  overflow-x: hidden;
 }
 
 .\*\:text-center > * {
@@ -933,6 +1003,11 @@ html {
   cursor: pointer;
 }
 
+.hover\:drop-shadow-xl:hover {
+  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .\*\:hover\:cursor-pointer:hover > * {
   cursor: pointer;
 }
@@ -941,23 +1016,9 @@ html {
   display: block;
 }
 
-@media (min-width: 640px) {
-  .sm\:w-\[80\] {
-    width: 80;
-  }
-
-  .sm\:w-\[80\%\] {
-    width: 80%;
-  }
-}
-
 @media (min-width: 768px) {
   .md\:z-40 {
     z-index: 40;
-  }
-
-  .md\:inline {
-    display: inline;
   }
 
   .md\:flex {
@@ -972,45 +1033,21 @@ html {
     height: 100vh;
   }
 
-  .md\:max-h-64 {
-    max-height: 16rem;
-  }
-
   .md\:w-36 {
     width: 9rem;
-  }
-
-  .md\:w-48 {
-    width: 12rem;
-  }
-
-  .md\:w-\[70\%\] {
-    width: 70%;
-  }
-
-  .md\:max-w-48 {
-    max-width: 12rem;
-  }
-
-  .md\:flex-row {
-    flex-direction: row;
   }
 
   .md\:gap-12 {
     gap: 3rem;
   }
 
-  .md\:bg-slate-50 {
+  .md\:bg-blue-300 {
     --tw-bg-opacity: 1;
-    background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+    background-color: rgb(147 197 253 / var(--tw-bg-opacity));
   }
 
   .md\:bg-opacity-100 {
     --tw-bg-opacity: 1;
-  }
-
-  .md\:bg-opacity-50 {
-    --tw-bg-opacity: 0.5;
   }
 
   .md\:p-4 {
@@ -1030,31 +1067,29 @@ html {
     line-height: 1.5rem;
   }
 
-  .md\:backdrop-blur-none {
-    --tw-backdrop-blur: blur(0);
-    -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-            backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 
-  .md\:backdrop-blur-sm {
-    --tw-backdrop-blur: blur(4px);
+  .md\:backdrop-blur-none {
+    --tw-backdrop-blur: blur(0);
     -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
             backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
   }
 }
 
 @media (min-width: 1024px) {
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .lg\:justify-around {
     justify-content: space-around;
   }
 
   .lg\:p-24 {
     padding: 6rem;
-  }
-
-  .lg\:px-60 {
-    padding-left: 15rem;
-    padding-right: 15rem;
   }
 
   .lg\:py-12 {
@@ -1069,18 +1104,6 @@ html {
 }
 
 @media (min-width: 1280px) {
-  .xl\:max-h-72 {
-    max-height: 18rem;
-  }
-
-  .xl\:w-52 {
-    width: 13rem;
-  }
-
-  .xl\:max-w-52 {
-    max-width: 13rem;
-  }
-
   .xl\:p-32 {
     padding: 8rem;
   }
